--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        overflow-y: auto;
       }
       body {
         background-color: #000;
